--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.google.com/specimen/Rubik");
 :root {
   --Blue: hsl(246, 80%, 60%);
   --Light-red-work: hsl(15, 100%, 70%);
@@ -21,7 +22,7 @@
 }
 body {
   background-color: var(--Very-dark-blue);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Rubik";
   /* overflow: hidden; */
   display: flex;
   justify-content: center;
@@ -31,9 +32,9 @@ body {
 }
 .container {
   width: 90%;
-  padding: 20px;
+  padding:5px;
   display: grid;
-  gap: 40px;
+  gap: 60px;
   grid-template-columns: 1fr;
   /* border: 1px solid red; */
 }
@@ -42,28 +43,30 @@ body {
   border-radius: 20px;
   position: relative;
   padding-top: 2rem;
-  padding-left: 2.5rem;
   padding-bottom: 7rem;
   overflow: hidden;
 }
 .user-content {
   display: flex;
-  /* background-color: red; */
+  align-items: center;
+/* background-color: red; */
 }
 .user-content img {
-  width: 80px;
+  width: 70px;
   border: 2px solid white;
   border-radius: 50%;
-  height: 80px;
-  margin-right: 40px;
+  height: 70px;
+  margin-left: 2rem;
+  margin-right: 10px;
 }
-.username h2 {
+.username h4 {
   font-weight: 300;
   color: var(--Pale-Blue);
+  font-size: 18px;
 }
-.username h1 {
-  font-size: 30px;
-  font-weight: 600;
+.username h2 {
+
+  font-weight: 300;
 }
 .activity {
   position: absolute;
@@ -85,6 +88,8 @@ body {
   position: relative;
   overflow: hidden;
 }
+
+
 .card-img img {
   position: absolute;
   right: 0;
@@ -111,9 +116,10 @@ body {
   text-align: right;
 }
 .last-activitys h3 {
-  padding-top: 20px;
+  padding-top: 30px;
   color: var(--Desaturated-blue);
-  font-size: 18px;
+  font-size: 16px;
+  font-weight: 300;
 }
 .work {
   background-color: var(--Light-red-work);
@@ -133,13 +139,31 @@ body {
 .exercise {
   background-color: var(--Lime-green-exercise);
 }
+.main-card {
+  display: grid;
+  grid-template-columns:1fr;
+  gap:1rem;
+}
+#weekly:hover{
+  color: var(--Pale-Blue);
+}
+#daily:hover{
+  color: var(--Pale-Blue);
+}
+#monthly:hover{
+  color: var(--Pale-Blue);
+}
+.card-activity:hover {
+  opacity: 0.9;
+  background: var(--Pale-Blue);
+}
 @media (min-width: 976px) {
   .container {
     max-width: 1440px;
-    grid-template-columns: 250px 2fr;
+    grid-template-columns: 200px 2fr;
   }
   .main-card {
-    display: grid;
+
     grid-template-columns: 1fr 1fr 1fr;
     gap: 2rem;
   }
@@ -147,11 +171,23 @@ body {
     height: 100%;
   }
   .user-content {
-    display: block;
+    flex-direction: column;
+    align-items: start;
+  }
+  .user-content img{
+    margin-left: 10px;
+  }
+  .username{
+    margin-top: 2.5rem;
+    margin-left: 10px;
+  }
+  .username h2{
+    font-size: 2rem;
   }
   .activity {
     flex-direction: column;
-    justify-content: space-between;
+    padding: 20px;
+    gap:2rem;
   }
   .cards {
     padding-bottom: 14rem;
@@ -162,10 +198,10 @@ body {
   .last-activitys h3 {
     position: absolute;
     left: 10%;
-    bottom: 10%;
+    bottom: 20%;
   }
   .card-content h1 {
-    font-size: 3.5rem;
+    font-size: 2rem;
   }
   /* ! HAHAHAHAAHAHAHAHAAHAHAHAHAAAAAAAAAAAAAAAAAAAAAA*/
 }
